--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		  "imports": {
 		    "three": "https://unpkg.com/three/build/three.module.js",
 		    "three/addons/": "https://unpkg.com/three/examples/jsm/",
-		    "mindar-image-three": "https://cdn.jsdelivr.net/npm/mind-ar/dist/mindar-image-three.prod.js"
+		    "mindar-image-three": "https://cdn.jsdelivr.net/npm/mind-ar@1.2.0/dist/mindar-image-three.prod.js"
 		  }
 		}
 		</script>
