--- a/facemask.html
+++ b/facemask.html
@@ -1,14 +1,14 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<script async src="https://unpkg.com/es-module-shims/dist/es-module-shims.js"></script>
+		<!--<script async src="https://unpkg.com/es-module-shims/dist/es-module-shims.js"></script>-->
 
 		<script type="importmap">
 		{
 		  "imports": {
-		    "three": "https://unpkg.com/three/build/three.module.js",
+		    "three": "./three/three.module.min.js",
 		    "three/addons/": "https://unpkg.com/three/examples/jsm/",
-		    "mindar-face-three": "https://cdn.jsdelivr.net/npm/mind-ar@1.2.0/dist/mindar-face-three.prod.js"
+		    "mindar-face-three": "./mindar/mindar-face-three.prod.js"
 		  }
 		}
 		</script>
