--- a/tryon.html
+++ b/tryon.html
@@ -1,14 +1,14 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<script async src="https://unpkg.com/es-module-shims/dist/es-module-shims.js"></script>
+		<!--<script async src="https://unpkg.com/es-module-shims/dist/es-module-shims.js"></script>-->
 
 		<script type="importmap">
 		{
 		  "imports": {
-		    "three": "https://unpkg.com/three/build/three.module.js",
+		    "three": "./three/three.module.js",
 		    "three/addons/": "https://unpkg.com/three/examples/jsm/",
-		    "mindar-face-three": "https://cdn.jsdelivr.net/npm/mind-ar@1.2.0/dist/mindar-face-three.prod.js"
+		    "mindar-face-three": "./mindar/mindar-face-three.prod.js"
 		  }
 		}
 		</script>
@@ -95,11 +95,11 @@
 
 	<body>
 	      	<div id="selections">
-			<img id="hat1" src="https://raw.githubusercontent.com/hiukim/mind-ar-js/master/examples/face-tracking/assets/hat/thumbnail.png"/>
-			<img id="hat2" src="https://raw.githubusercontent.com/hiukim/mind-ar-js/master/examples/face-tracking/assets/hat2/thumbnail.png"/>
-			<img id="glasses1" src="https://raw.githubusercontent.com/hiukim/mind-ar-js/master/examples/face-tracking/assets/glasses/thumbnail.png"/>
-			<img id="glasses2" src="https://raw.githubusercontent.com/hiukim/mind-ar-js/master/examples/face-tracking/assets/glasses2/thumbnail.png"/>
-			<img id="earring" src="https://raw.githubusercontent.com/hiukim/mind-ar-js/master/examples/face-tracking/assets/earring/thumbnail.png"/>
+			<img id="hat1" src="./assets/hat/thumbnail.png"/>
+			<img id="hat2" src="./assets/hat2/thumbnail.png"/>
+			<img id="glasses1" src="./assets/glasses/thumbnail.png"/>
+			<img id="glasses2" src="./assets/glasses2/thumbnail.png"/>
+			<img id="earring" src="./assets/earring/thumbnail.png"/>
 	      	</div>
 
 		<button id="capture"></button>
@@ -108,7 +108,6 @@
 			<img id="preview-image"/>
 			<div id="preview-share">Поширити</div>
 		</div>
-
 
 	</body>
 </html>
